--- a/my-portfolio/package.json
+++ b/my-portfolio/package.json
@@ -10,11 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.1.2",
+    "@heroicons/react": "^2.1.5",
+    "@react-three/fiber": "^8.17.5",
     "autoprefixer": "^10.4.20",
+    "lucide-react": "^0.427.0",
     "postcss": "^8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "three": "^0.167.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
